<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.nikith_shetty.qrhunt.MainActivity">

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/scan_btn_text"
        android:drawableLeft="@mipmap/scan_icon"
        android:drawableStart="@mipmap/scan_icon"/>

    <Button
        android:id="@+id/generateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/gen_btn_text"
        android:drawableLeft="@mipmap/gen_icon"
        android:drawableStart="@mipmap/gen_icon" />

    <Button
        android:id="@+id/historyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/history_btn_text"
        android:drawableLeft="@mipmap/hist_icon"
        android:drawableStart="@mipmap/hist_icon"/>

    <!--android:background="#3f51b5"-->
    <!--android:textColor="@color/white"-->
    <!--android:layout_margin="@dimen/activity_horizontal_margin"-->
</LinearLayout>